--- a/monitor-front/src/app/sensors/sensors.component.scss
+++ b/monitor-front/src/app/sensors/sensors.component.scss
@@ -57,11 +57,43 @@
     .name {
       background-color: white;
       transition: 0.3s;
+      position: relative;
+
+    }
+
+    .viewer {
+        overflow: hidden;
+      .cross-button {
+        display: none;
+      }
+    }
+
+    .admin {
+      overflow: hidden;
+      .cross-button {
+        padding-left: 5px;
+        height: 100%;
+        border-left: 1px solid black;
+        overflow: hidden;
+        width: 0;
+        top: 0;
+        right: -6px;
+        position: absolute;
+        transition: 0.3s cubic-bezier(0, 0, 1, 1);
+      }
     }
 
     .name:hover {
       background-color: #b4b4b4;
       cursor: pointer;
+    }
+
+    .admin:hover {
+
+      .cross-button {
+        width: 15px;
+        display: block;
+      }
     }
   }
 }
